--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.3.1
 beautifulsoup4==4.9.3
+boto3==1.17.92
+botocore==1.20.92
 bs4==0.0.1
 certifi==2020.12.5
 chardet==4.0.0
@@ -8,17 +10,21 @@ colorama==0.4.4
 dj-database-url==0.5.0
 Django==3.1.7
 django-heroku==0.3.1
+django-storages==1.11.1
 futures==3.1.1
 goslate==1.5.1
 gunicorn==20.1.0
 heroku==0.1.4
 idna==2.10
+jmespath==0.10.0
 Pillow==8.2.0
 psycopg2==2.8.6
 PyDictionary==2.0.1
-python-dateutil==1.5
+python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
+s3transfer==0.4.2
+six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
 urllib3==1.26.4
